@@ -48,8 +48,8 @@ public abstract class AbstractNiFiProvenanceEventAnalyzer implements NiFiProvena
      */
     protected URL parseUrl(String url) {
         try {
-            return new URL(url);
-        } catch (MalformedURLException e) {
+            return URI.create(url).toURL();
+        } catch (IllegalArgumentException | MalformedURLException e) {
             final String msg = String.format("Failed to parse url %s due to %s", url, e);
             throw new IllegalArgumentException(msg, e);
         }
