@@ -70,6 +70,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
 import java.net.Proxy;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
@@ -93,7 +94,7 @@ import java.util.stream.Collectors;
 @DynamicProperty(
         name = "The name of a Request Header to add",
         value = "The value of the Header",
-        expressionLanguageScope = ExpressionLanguageScope.VARIABLE_REGISTRY,
+        expressionLanguageScope = ExpressionLanguageScope.ENVIRONMENT,
         description = "Adds the specified property name/value as a Request Header in the Elasticsearch requests.")
 public class ElasticSearchClientServiceImpl extends AbstractControllerService implements ElasticSearchClientService {
     public static final String VERIFICATION_STEP_CONNECTION = "Elasticsearch Connection";
@@ -131,7 +132,7 @@ public class ElasticSearchClientServiceImpl extends AbstractControllerService im
                 .name(propertyDescriptorName)
                 .required(false)
                 .addValidator(StandardValidators.ATTRIBUTE_EXPRESSION_LANGUAGE_VALIDATOR)
-                .expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
+                .expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
                 .dynamic(true)
                 .build();
     }
@@ -397,7 +398,7 @@ public class ElasticSearchClientServiceImpl extends AbstractControllerService im
         this.url = hostsSplit.get(0);
         final List<HttpHost> hh = new ArrayList<>(hostsSplit.size());
         for (final String host : hostsSplit) {
-            final URL u = new URL(host);
+            final URL u = URI.create(host).toURL();
             hh.add(new HttpHost(u.getHost(), u.getPort(), u.getProtocol()));
         }
 
@@ -538,8 +539,8 @@ public class ElasticSearchClientServiceImpl extends AbstractControllerService im
         }
         sb.append("/").append(endpoint);
 
-        final HttpEntity queryEntity = new NStringEntity(query, ContentType.APPLICATION_JSON);
         try {
+            final HttpEntity queryEntity = new NStringEntity(query, ContentType.APPLICATION_JSON);
             return performRequest("POST", sb.toString(), requestParameters, queryEntity);
         } catch (final Exception e) {
             throw new ElasticsearchException(e);
