@@ -72,13 +72,12 @@ import org.apache.nifi.parameter.mock.PlaceholderParameterProvider;
 import org.apache.nifi.persistence.FlowConfigurationArchiveManager;
 import org.apache.nifi.processor.Relationship;
 import org.apache.nifi.provenance.MockProvenanceRepository;
-import org.apache.nifi.registry.VariableRegistry;
-import org.apache.nifi.registry.variable.FileBasedVariableRegistry;
 import org.apache.nifi.reporting.BulletinRepository;
 import org.apache.nifi.scheduling.ExecutionNode;
 import org.apache.nifi.scheduling.SchedulingStrategy;
 import org.apache.nifi.services.FlowService;
 import org.apache.nifi.util.NiFiProperties;
+import org.apache.nifi.validation.RuleViolationsManager;
 import org.apache.nifi.web.api.dto.BundleDTO;
 import org.apache.nifi.web.api.dto.ControllerServiceDTO;
 import org.apache.nifi.web.api.dto.FlowSnippetDTO;
@@ -139,7 +138,6 @@ public class TestFlowController {
     private NiFiProperties nifiProperties;
     private Bundle systemBundle;
     private BulletinRepository bulletinRepo;
-    private VariableRegistry variableRegistry;
     private ExtensionDiscoveringManager extensionManager;
     private StatusHistoryRepository statusHistoryRepository;
     private FlowSynchronizer standardFlowSynchronizer;
@@ -208,11 +206,11 @@ public class TestFlowController {
         policies1.add(policy2);
 
         authorizer = new MockPolicyBasedAuthorizer(groups1, users1, policies1);
-        variableRegistry = new FileBasedVariableRegistry(nifiProperties.getVariableRegistryPropertiesPaths());
 
         bulletinRepo = mock(BulletinRepository.class);
         controller = FlowController.createStandaloneInstance(flowFileEventRepo, nifiProperties, authorizer,
-                auditService, encryptor, bulletinRepo, variableRegistry, extensionManager, statusHistoryRepository);
+                auditService, encryptor, bulletinRepo, extensionManager, statusHistoryRepository,
+                mock(RuleViolationsManager.class));
 
         final XmlFlowSynchronizer xmlFlowSynchronizer = new XmlFlowSynchronizer(nifiProperties, extensionManager);
         final VersionedFlowSynchronizer versionedFlowSynchronizer = new VersionedFlowSynchronizer(extensionManager,
@@ -589,7 +587,7 @@ public class TestFlowController {
 
         controller.shutdown(true);
         controller = FlowController.createStandaloneInstance(flowFileEventRepo, nifiProperties, authorizer,
-                auditService, encryptor, bulletinRepo, variableRegistry, extensionManager, statusHistoryRepository);
+                auditService, encryptor, bulletinRepo, extensionManager, statusHistoryRepository, null);
         controller.synchronize(standardFlowSynchronizer, proposedDataFlow, mock(FlowService.class), BundleUpdateStrategy.IGNORE_BUNDLE);
         assertEquals(authFingerprint, authorizer.getFingerprint());
     }
@@ -1119,7 +1117,7 @@ public class TestFlowController {
         // create a processor dto
         final ProcessorDTO processorDTO = new ProcessorDTO();
         processorDTO.setId(UUID.randomUUID().toString()); // use a different id here
-        processorDTO.setPosition(new PositionDTO(new Double(0), new Double(0)));
+        processorDTO.setPosition(new PositionDTO(Double.valueOf(0), Double.valueOf(0)));
         processorDTO.setStyle(processorNode.getStyle());
         processorDTO.setParentGroupId("1234");
         processorDTO.setInputRequirement(processorNode.getInputRequirement().name());
@@ -1178,7 +1176,7 @@ public class TestFlowController {
         // create a processor dto
         final ProcessorDTO processorDTO = new ProcessorDTO();
         processorDTO.setId(UUID.randomUUID().toString()); // use a different id here
-        processorDTO.setPosition(new PositionDTO(new Double(0), new Double(0)));
+        processorDTO.setPosition(new PositionDTO(Double.valueOf(0), Double.valueOf(0)));
         processorDTO.setStyle(processorNode.getStyle());
         processorDTO.setParentGroupId("1234");
         processorDTO.setInputRequirement(processorNode.getInputRequirement().name());
@@ -1376,7 +1374,7 @@ public class TestFlowController {
         versionedDataflow.setParameterContexts(Collections.emptyList());
         versionedDataflow.setControllerServices(Collections.emptyList());
         versionedDataflow.setReportingTasks(Collections.emptyList());
-        versionedDataflow.setTemplates(Collections.emptySet());
+        versionedDataflow.setFlowAnalysisRules(Collections.emptyList());
 
         final VersionedProcessGroup rootGroup = new VersionedProcessGroup();
         rootGroup.setIdentifier(UUID.randomUUID().toString());
@@ -1393,7 +1391,6 @@ public class TestFlowController {
         rootGroup.setLabels(Collections.emptySet());
         rootGroup.setFunnels(Collections.emptySet());
         rootGroup.setControllerServices(Collections.emptySet());
-        rootGroup.setVariables(Collections.emptyMap());
         rootGroup.setDefaultFlowFileExpiration("0 sec");
         rootGroup.setDefaultBackPressureObjectThreshold(10000L);
         rootGroup.setDefaultBackPressureDataSizeThreshold("1 GB");
