@@ -16,21 +16,20 @@
  */
 package org.apache.nifi.redis.state;
 
-import org.apache.nifi.components.state.StateMap;
-
 import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.TreeMap;
+import org.apache.nifi.components.state.StateMap;
 
 /**
  * A StateMap implementation for RedisStateProvider.
  */
 public class RedisStateMap implements StateMap {
 
-    public static final Long DEFAULT_VERSION = new Long(-1);
-    public static final Integer DEFAULT_ENCODING = new Integer(1);
+    public static final Long DEFAULT_VERSION = Long.valueOf(-1);
+    public static final Integer DEFAULT_ENCODING = Integer.valueOf(1);
 
     private final Long version;
     private final Integer encodingVersion;
@@ -45,15 +44,11 @@ public class RedisStateMap implements StateMap {
         Objects.requireNonNull(stateValues, "State Values must be non-null");
     }
 
-    @Override
-    public long getVersion() {
-        return version;
-    }
 
     @Override
     public Optional<String> getStateVersion() {
         final String stateVersion;
-        if (DEFAULT_VERSION == version || version == null) {
+        if (Objects.equals(DEFAULT_VERSION, version) || version == null) {
             stateVersion = null;
         } else {
             stateVersion = String.valueOf(version);
@@ -79,7 +74,7 @@ public class RedisStateMap implements StateMap {
 
         private Long version;
         private Integer encodingVersion;
-        private Map<String,String> stateValues = new TreeMap<>();
+        private final Map<String, String> stateValues = new TreeMap<>();
 
         public Builder version(final Long version) {
             this.version = version;
