@@ -20,6 +20,7 @@ package org.apache.nifi.reporting;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
@@ -92,7 +93,7 @@ public class SiteToSiteProvenanceReportingTask extends AbstractSiteToSiteReporti
                     + "Available event types are " + Arrays.deepToString(ProvenanceEventType.values()) + ". If no filter is set, all the events are sent. If "
                     + "multiple filters are set, the filters are cumulative.")
             .required(false)
-            .expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
+            .expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
             .build();
 
@@ -104,7 +105,7 @@ public class SiteToSiteProvenanceReportingTask extends AbstractSiteToSiteReporti
                     + "multiple filters are set, the filters are cumulative. If an event type is included in Event Type to Include and excluded here, then the "
                     + "exclusion takes precedence and the event will not be sent.")
             .required(false)
-            .expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
+            .expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
             .build();
 
@@ -114,7 +115,7 @@ public class SiteToSiteProvenanceReportingTask extends AbstractSiteToSiteReporti
             .description("Regular expression to filter the provenance events based on the component type. Only the events matching the regular "
                     + "expression will be sent. If no filter is set, all the events are sent. If multiple filters are set, the filters are cumulative.")
             .required(false)
-            .expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
+            .expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
             .addValidator(StandardValidators.REGULAR_EXPRESSION_VALIDATOR)
             .build();
 
@@ -125,7 +126,7 @@ public class SiteToSiteProvenanceReportingTask extends AbstractSiteToSiteReporti
                     + "expression will not be sent. If no filter is set, all the events are sent. If multiple filters are set, the filters are cumulative. "
                     + "If a component type is included in Component Type to Include and excluded here, then the exclusion takes precedence and the event will not be sent.")
             .required(false)
-            .expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
+            .expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
             .addValidator(StandardValidators.REGULAR_EXPRESSION_VALIDATOR)
             .build();
 
@@ -135,7 +136,7 @@ public class SiteToSiteProvenanceReportingTask extends AbstractSiteToSiteReporti
             .description("Comma-separated list of component UUID that will be used to filter the provenance events sent by the reporting task. If no "
                     + "filter is set, all the events are sent. If multiple filters are set, the filters are cumulative.")
             .required(false)
-            .expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
+            .expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
             .build();
 
@@ -146,7 +147,7 @@ public class SiteToSiteProvenanceReportingTask extends AbstractSiteToSiteReporti
                     + "filter is set, all the events are sent. If multiple filters are set, the filters are cumulative. If a component UUID is included in "
                     + "Component ID to Include and excluded here, then the exclusion takes precedence and the event will not be sent.")
             .required(false)
-            .expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
+            .expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
             .build();
 
@@ -156,7 +157,7 @@ public class SiteToSiteProvenanceReportingTask extends AbstractSiteToSiteReporti
             .description("Regular expression to filter the provenance events based on the component name. Only the events matching the regular "
                     + "expression will be sent. If no filter is set, all the events are sent. If multiple filters are set, the filters are cumulative.")
             .required(false)
-            .expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
+            .expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
             .addValidator(StandardValidators.REGULAR_EXPRESSION_VALIDATOR)
             .build();
 
@@ -167,7 +168,7 @@ public class SiteToSiteProvenanceReportingTask extends AbstractSiteToSiteReporti
                     + "expression will not be sent. If no filter is set, all the events are sent. If multiple filters are set, the filters are cumulative. "
                     + "If a component name is included in Component Name to Include and excluded here, then the exclusion takes precedence and the event will not be sent.")
             .required(false)
-            .expressionLanguageSupported(ExpressionLanguageScope.VARIABLE_REGISTRY)
+            .expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
             .addValidator(StandardValidators.REGULAR_EXPRESSION_VALIDATOR)
             .build();
 
@@ -274,8 +275,8 @@ public class SiteToSiteProvenanceReportingTask extends AbstractSiteToSiteReporti
         final String nifiUrl = context.getProperty(SiteToSiteUtils.INSTANCE_URL).evaluateAttributeExpressions().getValue();
         URL url;
         try {
-            url = new URL(nifiUrl);
-        } catch (final MalformedURLException e1) {
+            url = URI.create(nifiUrl).toURL();
+        } catch (IllegalArgumentException | MalformedURLException e) {
             // already validated
             throw new AssertionError();
         }
